# moodlescrape

./: Cargo.toml
src/: main.rs
