[package]
name = "moodlescrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thirtyfour = "0.29.3"
tokio = { version = "1.19.2", features = ["rt", "process"] }
color-eyre = "0.6.1"
owo-colors = "3.4.0"
rpassword = "6.0.1"
serde_json = "1.0.81"
lazy_static = "1.4.0"
